# errlore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_error_reduction.py  bench_retrieval.py
benchmarks/results/: CONSISTENCY_SIGNAL_2026-07-11.md  REPRODUCIBILITY_2026-07-11.md  gemma_2026-07-11.jsonl  gemma_2026-07-11_raw.jsonl  gemma_2026-07-11_report.txt  haiku_2026-07-11.jsonl  haiku_2026-07-11_raw.jsonl  haiku_2026-07-11_report.txt  haiku_2026-07-11_seed11.txt  haiku_2026-07-11_seed22.txt  haiku_2026-07-11_seed33.txt  haiku_newfamilies_2026-07-11.jsonl  haiku_newfamilies_2026-07-11_raw.jsonl  haiku_newfamilies_2026-07-11_report.txt
benchmarks/results/error_reduction/: raw_outputs.jsonl  report.md
docs/: OBSERVABILITY_DECAY.md  SHADOW_MODE_SPEC.md
examples/: anthropic_agent.py  langchain_agent.py  openai_agent.py
examples/claude-code/: README.md  errlore_posttooluse.py  errlore_posttoolusefailure.py  errlore_sessionstart.py  settings.json.example
integrations/openwebui/: README.md  errlore_feedback_action.py  errlore_memory_filter.py
site/: demo_script.py
src/errlore/: __init__.py  cli.py  consistency.py  facade.py  redaction.py  sanitize.py  shadow.py
src/errlore/errmem/: __init__.py  classifier.py  injector.py  patterns.py  tracker.py
src/errlore/integrations/: __init__.py  claude_code.py  langchain.py
src/errlore/io/: __init__.py  jsonl_index.py  jsonl_writer.py  repair.py
src/errlore/lessons/: __init__.py  graduation.py  models.py  store.py
src/errlore/retrieval/: __init__.py  backend.py  index.py
src/errlore/trust/: __init__.py  engine.py
tests/: conftest.py  test_cli.py  test_consistency.py  test_errmem.py  test_facade.py  test_graduation.py  test_hardening.py  test_harm_gate.py  test_io.py  test_langchain_integration.py  test_lessons.py  test_multiprocess.py  test_openwebui_integration.py  test_redaction.py  test_regressions.py  test_retrieval.py  test_shadow.py  test_trust.py
