[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "errlore"
version = "0.1.0"
description = "Memory for AI agents that learns from failures: lessons, known-issues injection, and per-model trust — embedded, file-based, no server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Ma4etaSS" }]
keywords = ["llm", "agents", "memory", "lessons", "error-learning", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "filelock>=3.13",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "fastembed>=0.3",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/Ma4etaSS/errlore"

[tool.hatch.build.targets.wheel]
packages = ["src/errlore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/errlore/errmem/patterns.py" = ["RUF001", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["errlore"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "filelock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastembed.*"
ignore_missing_imports = true
