[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "errlore"
version = "0.2.1"
description = "Memory for AI agents that learns from failures: lessons, known-issues injection, and per-model trust — embedded, file-based, no server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ma4etaSS" }]
keywords = ["llm", "agents", "memory", "lessons", "error-learning", "trust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "filelock>=3.13",
]

[project.scripts]
errlore = "errlore.cli:main"

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.6,<0.9",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pydantic>=2.0",  # required only by the Open WebUI integration tests
    "ruff>=0.6",
    "mypy>=1.11",
    "fastembed>=0.6,<0.9",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://errlore.com"
Repository = "https://github.com/Ma4etaSS/errlore"
Issues = "https://github.com/Ma4etaSS/errlore/issues"
Changelog = "https://github.com/Ma4etaSS/errlore/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/errlore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/errlore/errmem/patterns.py" = ["RUF001", "RUF003"]
"benchmarks/*" = ["E501", "SIM115"]  # long authored lesson strings; long-lived log handle
"site/*" = ["E501"]  # demo-script terminal strings read better unwrapped

[tool.mypy]
python_version = "3.12"  # numpy stubs need 3.12 syntax; 3.10 runtime compat is enforced by ruff(py310) + CI matrix
strict = true
packages = ["errlore"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "filelock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastembed.*"
ignore_missing_imports = true
